[GUI] Fixed z-index issues!

--- a/style/gui/gui.css
+++ b/style/gui/gui.css
@@ -21,6 +21,10 @@ button.gui {
     position: absolute;
 }
 
+.element {
+    z-index: 1;
+}
+
 .rootGrid {
     position: relative;
 }
